[NO-JIRA] Set a qa build environment supporting JAVA17