@@ -80,6 +80,9 @@
             <systemProperties>
               <maven.home>${maven.home}</maven.home>
             </systemProperties>
+            <argLine>
+                --add-exports java.base/sun.reflect.annotation=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
       </plugins>
